--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    # Load dag to gs://us-central1-composer-burnwo-352245cf-bucket/dag
-    args: ['gsutil', 'cp', 'taxi_data_pipeline/taxi_data_dag.py', 'gs://us-central1-composer-burnwo-352245cf-bucket/dags/']
+    # Load dags to gs://us-central1-composer-burnwo-db1f01e8-bucket/dag
+    args: ['gsutil', 'cp', 'gcp_cloud_composer/*/*.py', 'gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    # Load sql to gs://us-central1-composer-burnwo-352245cf-bucket/dag/sql
-    args: [ 'gsutil', 'cp', 'taxi_data_pipeline/sql/taxi_query.sql', 'gs://us-central1-composer-burnwo-352245cf-bucket/dags/sql/']
+    # Load sql to gs://us-central1-composer-burnwo-db1f01e8-bucket/dag/sql
+    args: [ 'gsutil', 'cp', 'gcp_cloud_composer/*/*/sql/*.sql', 'gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/sql/']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    # Load configuration file to gs://us-central1-composer-burnwo-352245cf-bucket/dags/sql
-    args: [ 'gsutil', 'cp', 'utils/conf-prod.json', 'gs://us-central1-composer-burnwo-352245cf-bucket/dags/conf/']
+    # Load configuration file to gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/sql
+    args: [ 'gsutil', 'cp', 'gcp_cloud_composer/utils/*.json', 'gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/conf/']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    # Load python utils to gs://us-central1-composer-burnwo-352245cf-bucket/dag/utils
-    args: [ 'gsutil', 'cp', 'utils/python/*', 'gs://us-central1-composer-burnwo-352245cf-bucket/dags/utils/python/']
+    # Load python utils to gs://us-central1-composer-burnwo-db1f01e8-bucket/dag/utils
+    args: [ 'gsutil', 'cp', 'gcp_cloud_composer/utils/python/*', 'gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/utils/python/']
