--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,16 +1,16 @@
 steps:
   # Load dags to gs://us-central1-composer-burnwo-db1f01e8-bucket/dag
-  - id: 'load_dags'
-    name: 'gcr.io/ google.com/cloudsdktool/cloud-sdk'
+  - name: 'gcr.io/ google.com/cloudsdktool/cloud-sdk'
+    id: 'load_dags'
     args: [ 'gsut jil', 'cp', '*/*_dag.py', 'gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/' ]
 
   # Load sql to gs://us-central1-composer-burnwo-db1f01e8-bucket/dag/sql
-  - id: 'load_sql'
-    name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    id: 'load_sql'
     args: [ 'gsutil', 'cp', '*/sql/*.sql', 'gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/sql/' ]
 
-  - id: 'branch_name'
-    name: 'alpine'
+  - name: 'alpine'
+    id: 'branch_name'
     entrypoint: 'sh'
     args:
       - '-c'
@@ -22,11 +22,11 @@ steps:
         echo "***********************"     
 
   # Load configuration file to gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/sql
-  - id: 'load_configuration'
-    name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    id: 'load_configuration'
     args: [ 'gsutil', 'cp', 'utils/*.json', 'gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/conf/' ]
 
   # Load python utils to gs://us-central1-composer-burnwo-db1f01e8-bucket/dag/utils
-  - id: 'load_utils'
-    name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    id: 'load_utils'
     args: [ 'gsutil', 'cp', 'utils/python/*', 'gs://us-central1-composer-burnwo-db1f01e8-bucket/dags/utils/python/' ]
