--- a/requirements.txt
+++ b/requirements.txt
@@ -93,6 +93,7 @@ idna==3.3
 importlib-metadata==4.10.0
 importlib-resources==5.4.0
 inflection==0.5.1
+iniconfig==1.1.1
 iso8601==1.0.2
 isodate==0.6.1
 itsdangerous==1.1.0
@@ -120,6 +121,7 @@ pandas==1.3.5
 pandas-gbq==0.14.1
 pendulum==2.1.2
 platformdirs==2.4.1
+pluggy==1.0.0
 prison==0.2.1
 proto-plus==1.18.1
 protobuf==3.19.1
@@ -135,6 +137,7 @@ PyJWT==1.7.1
 pyOpenSSL==21.0.0
 pyparsing==3.0.6
 pyrsistent==0.18.0
+pytest==6.2.5
 python-daemon==2.3.0
 python-dateutil==2.8.2
 python-nvd3==0.15.0
@@ -159,6 +162,7 @@ tabulate==0.8.9
 tenacity==8.0.1
 termcolor==1.1.0
 text-unidecode==1.3
+toml==0.10.2
 typing-extensions==4.0.1
 typing-inspect==0.7.1
 unicodecsv==0.14.1
